[package]
name = "query-graph"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "A concurrent incremental query dependency graph system."

[workspace]
members = ["example"]

[dependencies]
hashbrown = { version = "0.14.2", features = ["rayon"] }
parking_lot = "0.12.1"
rayon = "1.8.0"
