[package]
name = "query-graph"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "A concurrent incremental query dependency graph system."
repository = "https://github.com/NoahGav/query-graph"

[workspace]
members = ["example"]

[dependencies]
ahash = "0.8.5"
hashbrown = { version = "0.14.2", features = ["rayon"] }
parking_lot = "0.12.1"
rayon = "1.8.0"
